nuevo html home creado y cambios en index y js

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Halloween</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+
+<div id="bienvenida">Bienvenido al quiz</div>
+<form action=""></form>
+    <label for="nombre">Introduce tu nombre</label>
+    <input type="text" id="nombre">
+    <button id="comenzar">Comenzar</button>
+
+<section id="preguntaUno">
     
+    <h2 id="pregunta">pregunta1</h2>
+    <form action="">
+        <input type="radio" id="uno" name="pregutnaUno">
+        <label for="uno" id="respuestaUno">inyectar respuesta1</label>
+        <input type="radio" id="dos" name="pregutnaUno">
+        <label for="dos" id="respuestaDos">inyectar respuesta1</label>
+        <input type="radio" id="tres" name="pregutnaUno">
+        <label for="tres" id="respuestaTres">inyectar respuesta1</label>
+        <input type="radio" id="cuatro" name="pregutnaUno">
+        <label for="cuatro" id="respuestaCuatro">inyectar respuesta1</label>
+    </form>
+
+
+
+    </form>
+
+</section>
+
+
+
+
+<script type="module" src="script/script.js"></script>
 </body>
 </html>
