buttons styles modified

--- a/question.html
+++ b/question.html
@@ -12,7 +12,16 @@
     <body>
         <section class="header">
             <div class="score time">
-                <p>Time: <span id="timeCount">10s</span></p>
+                <p>
+                    Good luck!
+                    <span
+                        ><i
+                            class="em em-hugging_face"
+                            aria-role="presentation"
+                            aria-label="HUGGING FACE"
+                        ></i
+                    ></span>
+                </p>
             </div>
             <div class="score">
                 <p>Score: <span id="scoreCount">0</span></p>
