--- a/question.html
+++ b/question.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Preguntas</title>
         <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="dist/sweetalert.css" />
         <link rel="stylesheet" href="./css/normalize.css" />
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
@@ -35,6 +36,7 @@
 
             <div class="bar"></div>
         </section>
+        <script src="./node_modules/sweetalert/dist/sweetalert.min.js"></script>
         <script src="./js/question.js"></script>
     </body>
 </html>
