--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
-        <script src="./js/home.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
